# CG_Blatt2

./: CMakeLists.txt
CGVStudio/CGVStudio/: CGVStudio.vcxproj
src/: SimpleRayTracer.cpp  SimpleRayTracer.h  color.cpp  rgbimage.cpp  vector.cpp
